--- a/css/bstats-yotsuba.css
+++ b/css/bstats-yotsuba.css
@@ -24,3 +24,8 @@
     background-color: #fff;
     color: black;
 }
+
+table.flashListing {
+    border-collapse: separate;
+    border-spacing: 1px;
+}
